src/objects/Approval_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <inlineHelpText>Please select one level from the picklist and define the approval level</inlineHelpText>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPA_Total_Drafting_Hours__c</fullName>
        <label>FPA Total Drafting Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPA_Total_Engineering_Hours__c</fullName>
        <label>FPA Total Engineering Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPA_Total_Manufacturing_Hours__c</fullName>
        <label>FPA Total Manufacturing Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Approval Criterias</relationshipLabel>
        <relationshipName>Approval_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_QTY_of_Units_On_Single_Line_Item__c</fullName>
        <label>Max QTY of Units On Single Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Total_Drafting_Hours_per_Single_l__c</fullName>
        <label>Max Total Drafting Hours per Single l</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Total_Engineering_Hours_for_Single__c</fullName>
        <label>Max Total Engineering Hours for Single</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Total_Manufacturing_Hours_for_Single__c</fullName>
        <label>Max Total Manufacturing Hours for Single</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Total_Material_Cost_for_Single_Line__c</fullName>
        <label>Max Total Material Cost for Single Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Brand_Name__c</fullName>
        <formula>Format__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY_of_line_Item_with_Specials__c</fullName>
        <label>QTY of line Item with Specials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Level__c</columns>
        <columns>Format__c</columns>
        <columns>Product_Brand_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Approval Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>